# irregation-system-sj

./: CMakeLists.txt  README.md  clean.sh  run_simulation.sh  run_test.sh
FieldNode/: FieldNode.ino
embedded/main/: Enums.cpp  Enums.hpp  FramManager.cpp  FramManager.hpp  FramMap.hpp  LcdLayouts.cpp  LcdLayouts.hpp  MqttHandler.cpp  MqttHandler.hpp  MqttTopics.cpp  MqttTopics.hpp  Pinout.hpp  PredefinedCommands.hpp  RelayArray.cpp  RelayArray.hpp  RelayGroupManager.cpp  RelayGroupManager.hpp  SolenoidCtrlCmd.cpp  SolenoidCtrlCmd.hpp  SolenoidCtrlCmdExamples.hpp  SolenoidManager.cpp  SolenoidManager.hpp  Structures.cpp  Structures.hpp  Utils.cpp  Utils.hpp  YFG1FlowMeter.cpp  YFG1FlowMeter.hpp  main.ino
embedded/mock/: EnumsAndConstants.h  Serial.h  Shifty.h  String.h
raiLogger/: MQTTLogConverter.py  MQTTLogger.py  output.csv
raiLogger/mqtt_logs/: mqtt_log_2025-08-10.csv
simulation/: CMakeLists.txt  Utility.hpp  csv_processor.cpp  main.cpp  plot_all.py
simulation/config/: commands.json  weather.json  weather_schedule.json
simulation/weather_simulation/: weather_simulator.py
test/: CMakeLists.txt  RelayGroupManagerTest.cpp  ScenarioTest.cpp  SolenoidCtrlCmdTest.cpp  SolenoidManagerTest.cpp  StructuresTest.cpp  UtilsTest.cpp
